Fixed video baclground on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,13 @@ body {
     }
 
     video {
-        @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
+        @apply w-full h-full absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 object-contain;
+    }
+    
+    @media (min-width: 768px) {
+        video {
+            @apply h-[80%] bottom-0 left-0 top-auto translate-x-0 translate-y-0;
+        }
     }
 
     #cocktails {
@@ -278,11 +284,11 @@ body {
         @apply relative w-full md:mt-40 mt-0 2xl:px-0 px-5 py-20 radial-gradient;
 
         #m-left-leaf {
-            @apply object-contain absolute -bottom-20 left-0 md:w-fit w-1/3;
+            @apply object-contain absolute -top-40 left-0 md:w-fit w-1/3;
         }
 
         #m-right-leaf {
-            @apply object-contain absolute -top-40 right-0 md:w-fit w-1/4;
+            @apply object-contain absolute -bottom-20 right-0 md:w-fit w-1/4;
         }
 
         .cocktail-tabs {
